# dail-llm

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt  train_pipeline.py
dail_llm/: config.py  inference.py
dail_llm/app/: streamlit_app.py
dail_llm/eval/: evaluate.py  metrics.py
dail_llm/model/: generate.py  train.py  transformer.py
dail_llm/rag/: retriever.py
dail_llm/visualisation/: attention_viz.py  training_plots.py
outputs/: evaluation_results.md  readme-data.md
outputs/checkpoints/: test_ids.pt
